# https://github.com/eteran/cpp-utilities
cmake_minimum_required(VERSION 3.5)
project(cpp-utilities LANGUAGES CXX)

enable_testing()

add_subdirectory(algorithm)
add_subdirectory(arena)
add_subdirectory(bitset)
add_subdirectory(bitwise)
add_subdirectory(container)
add_subdirectory(defaults)
add_subdirectory(fixed)
add_subdirectory(hash)
add_subdirectory(logger)
add_subdirectory(pprint)
add_subdirectory(programs)
add_subdirectory(range)
add_subdirectory(string)
add_subdirectory(thread_pool)
add_subdirectory(uint128)
add_subdirectory(uuid)
